--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,7 +22,7 @@ body {
 }
 
 .container {
-   max-width: 1450px;
+   max-width: 1440px;
    margin: 0px auto;
 }
 
@@ -43,11 +43,47 @@ body {
 .title {
    font-weight: 800;
    font-size: 80px;
-   line-height: 108%;
+   line-height: 195%;
    text-transform: uppercase;
-   color: #FFFFFF;
+   color: #ffffff00;
+   position: relative;
+   z-index: 2;
+   &::before {
+      content: "";
+      background: #4AF6CD;
+      width: 80px;
+      height: 1px;
+      position: absolute;
+      top: 30px;
+      right: 0;
+   }
+   & span {
+      position: absolute;
+      top: 0;
+      left: 0;
+      font-weight: 800;
+      font-size: 80px;
+      line-height: 195%;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      z-index: 3;
+   }
+   & p {
+      position: absolute;
+      font-size: 220px;
+      top: 70px;
+      right: 0;
+      color: rgba(41, 41, 41, 0.185);
+      z-index: 1;
+   }
    @media (max-width: 1025px) {
       font-size: 60px;
+      & p {
+         font-size: 200px;
+      }
+      & span {
+         font-size: 60px;
+      }
    }
    @media (max-width: 769px) {
       font-size: 50px;
@@ -140,7 +176,7 @@ body {
       z-index: 1;
       display: flex;
       align-items: start;
-      padding: 0px 5px 40px 5px;
+      padding: 0px 0px 40px 0px;
       background: radial-gradient(ellipse at center, rgba(125, 126, 125, 0.3) 0%, rgba(110, 111, 110, 0.3) 8%, rgba(24, 24, 24, 0.9) 54%, rgba(0, 0, 0, 0.9) 67%, rgba(0, 0, 0, 0.9) 100%);
       @media (max-width: 768px) {
          padding: 0px 0px 30px 0px;
@@ -214,8 +250,10 @@ body {
 
    &__slider-location {
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
       width: 100%;
+      @media (max-width: 540px) {
+      }
    }
 
    &__bak-lay {
@@ -316,7 +354,15 @@ body {
             position: absolute;
             top: 50%;
             right: -35px;
+            @media (max-width: 769px) {
+               right: -32.5px;
+            }
+            @media (max-width: 426px) {
+               width: 15px;
+               right: -30px;
+            }
          }
+         
       }
    }
 
@@ -357,8 +403,7 @@ body {
          display: block;
          position: absolute;
          right: -90px;
-         top: 50%;
-         transform: translate(0px, -50%);
+         bottom: 0;
          padding: 10px;
          border: 2px solid white;
          border-radius: 5px;
@@ -465,11 +510,34 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      position: relative;
    }
 
-   &__search-icon {}
+   &__search-icon {
+      cursor: pointer;
+   }
 
-   &__search-field {}
+   &__search-field {
+      display: none;
+   }
+
+   &__search-field-active {
+      display: block;
+      position: absolute;
+      right: -127px;
+      top: 0px;
+      z-index: 50;
+   }
+
+   &__input {
+      width: 120px;
+      height: 30px;
+      background-color: rgba(0, 0, 0, 0.562);
+      border: 2px solid white;
+      border-radius: 5px;
+      color: white;
+      padding: 0px 5px;
+   }
 
    &__info {}
 
@@ -504,6 +572,9 @@ body {
       padding: 0px 5px;
       @media (max-width: 769px) {
          flex-direction: column;
+      }
+      @media (max-width: 540px) {
+         position: relative;
       }
    }
 }
@@ -582,6 +653,9 @@ body {
       @media (max-width: 769px) {
          margin: 0px 0px 5px 0px;
       }
+      @media (max-width: 769px) {
+         cursor: pointer;
+      }
    }
 
    &__place {
@@ -594,6 +668,17 @@ body {
       @media (max-width: 661px) {
          font-size: 10px;
       }
+      @media (max-width: 540px) {
+         display: none;
+      }
+   }
+   &__place-active {
+      @media (max-width: 540px) {
+         display: block;
+         position: absolute; 
+         left: 6px;
+         top: 20px;
+      }
    }
 }
 
@@ -604,7 +689,13 @@ body {
       margin: 0px 0px 12px 0px;
    }
 
-   &__title {}
+   &__title {
+      line-height: 108%;
+      color: #fff;
+      &::before {
+         content: none;
+      }
+   }
 }
 
 .conditional-shore {
@@ -622,6 +713,12 @@ body {
    &__arrow-down {
       align-self: end;
       margin: 0px 20px 0px 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      @media (max-width: 540px) {
+         flex: 1 1 auto;
+      }
    }
    
    &__arrow-img {}
@@ -638,6 +735,8 @@ body {
       @media (max-width: 540px) {
          flex-wrap: wrap;
          justify-content: end;
+         
+         flex: 0 0;
       }
    }
 
@@ -670,7 +769,7 @@ body {
          margin: 0px 5px 10px 5px;
       }
       @media (max-width: 540px) {
-         max-width: 150px;
+         width: 150px;
       }
    }
 
@@ -785,3 +884,392 @@ body {
          cursor: pointer;
       }
 }
+
+/*================Surf===============================*/
+
+.page {
+
+   &__surf {
+      background: #171919;
+   }
+}
+
+.surf {
+
+   &__container {}
+
+   &__body {
+      display: flex;
+      flex-direction: column;
+      padding: 127px 0px 0px 0px;
+   }
+
+   &__head {
+      align-self: start;
+      margin: 0px 0px 28px 0px;
+   }
+
+   &__title {
+      margin: 0px 0px 0px 294px;
+   }
+
+   &__world {
+      align-content: stretch;
+      position: relative;
+      padding: 0px 70px;
+      margin: 0px 0px 211px 0px;
+   }
+
+   &__box-world {}
+
+   &__world-map {
+      position: absolute;
+      left: 0;
+      top: 0;
+      img {
+         width: 100%;
+      }
+   }
+
+   &__surf-beach {}
+}
+
+.world-box {
+
+   &__head {
+      display: flex;
+      flex-direction: column;
+      align-items: end;
+      margin: 0px 0px 197px 0px;
+      position: relative;
+   }
+
+   &__sub-title {}
+
+   &__small-title {}
+
+   &__cards {
+   }
+
+   &__slider-beach {}
+
+   &__slider-container {}
+
+   &__slider-line {}
+
+   &__slider-card {}
+}
+
+
+.card-slider {
+
+   &__box {
+      display: flex;
+      align-items: center;
+      justify-content: end;
+      position: relative;
+      
+   }
+
+   &__lable {
+   }
+
+   &__lable-box {
+      background: #0f1010c7;
+      border-radius: 6px;
+      padding: 34px;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+   }
+
+   &__name-beach {
+      font-weight: 800;
+      font-size: 18px;
+      line-height: 122.22%;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      margin: 0px 0px 22px 0px;
+      position: relative;
+      &::before {
+         content: "";
+         background: #4AF6CD;
+         width: 80px;
+         height: 1px;
+         position: absolute;
+         top: 30px;
+         left: 0;
+      }
+   }
+
+   &__country {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 118.75%;     
+      color: #FFFFFF;
+      margin: 0px 0px 30px 0px;
+   }
+
+   &__weather {}
+
+   &__weather-box {
+      display: flex;
+      margin: 0px -27.5px;
+   }
+
+   &__column {
+      padding: 0px 27.5px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+   }
+
+   &__arrow-right {
+      position: absolute;
+      top: 30px;
+      right: 30px;
+   }
+
+   &__coordinates {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 22px;
+      text-align: right;
+      letter-spacing: 8px;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      position: absolute;
+      right: -185px;
+      top: 50%;
+      transform: translate(0px, -50%) rotate(-90deg);
+   }
+}
+
+.weather-info {
+
+   &__icon {
+      margin: 0px 0px 4px 0px;
+   }
+
+   &__indicators {
+      font-weight: 800;
+      font-size: 16px;
+      line-height: 118.75%;
+      text-align: center;
+      color: #FFFFFF;
+      margin: 0px 0px 9px 0px;
+   }
+
+   &__name {
+      font-weight: 300;
+      font-size: 10px;
+      line-height: 120%;
+      text-align: center;
+      text-transform: uppercase;
+      color: #FFFFFF;
+   }
+}
+
+.beach-slider {
+
+   &__box {
+      padding: 50px 0px 50px 0px;
+      overflow: hidden;
+   }
+
+   &__slider {
+      position: relative;
+      
+   }
+
+   &__line {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 1fr;
+   }
+
+   &__slide {
+      position: relative;
+   }
+
+   &__slide-active {
+      z-index: 20;
+   }
+
+   &__image {
+      img {
+         //width: 100%;
+      }
+   }
+
+   &__cover {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000000bb;
+   }
+
+   &__cover-active{
+      background-color: #0000002f;
+   }
+
+   &__name {
+      position: absolute;
+      top: 10%;
+      left: 10%;
+      font-weight: 800;
+      font-size: 40px;
+      line-height: 90%;
+      text-transform: uppercase;
+      color: #FFFFFF;
+   }
+
+   &__place {
+      position: absolute;
+      bottom: 35%;
+      left: -25%;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 122.22%;
+      letter-spacing: 8px;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      transform: rotate(-90deg);
+      padding: 5px;
+   }
+
+   &__arrows {
+      position: absolute;
+      top: -30px;
+      right: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   }
+
+   &__left-arrow {
+      margin: 0px 20px 0px 0px;
+   }
+
+   &__right-arrow {
+      transform: rotate(180deg);
+   }
+}
+#beach-1 {
+   transform: translate(0px, 10px) scaleX(1.1);
+}
+#beach-2 {
+   transform: translate(0px, 30px)scaleX(1.1);
+}
+#beach-3 {
+   transform: translate(0px, 0px)scaleX(1.1);
+}
+#beach-4 {
+   transform: translate(0px, 30px)scaleX(1.1);
+}
+#beach-5 {
+   transform: translate(0px, 0px)scaleX(1.1);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.page {
+
+   &__test {}
+}
+
+.test {
+
+   &__container {}
+
+   &__body {
+      background-color: rgb(255, 140, 140);
+      padding: 50px 25px;
+      overflow: hidden;
+   }
+
+   &__btn {
+      button {
+         width: 150px;
+         height: 70px;
+         background-color: rgb(26, 13, 13);
+         color: #fff;
+         font-size: 36px;
+      }
+   }
+ 
+   &__slider {
+      background-color: rgb(239, 255, 148);
+      padding: 50px;
+      width: 1400px;
+      margin: 0px 0px 20px 0px;
+      //overflow: hidden;
+   }
+
+   &__slider-line {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: 1fr;
+      column-gap: 50px;
+      img {
+         width: 400px;
+         height: 200px;
+      }
+   }
+
+   &__image {
+      position: relative;
+   }
+
+   &__cover {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(ellipse at center, rgba(125, 126, 125, 0.3) 0%, rgba(110, 111, 110, 0.3) 8%, rgba(24, 24, 24, 0.9) 54%, rgba(0, 0, 0, 0.9) 67%, rgba(0, 0, 0, 0.9) 100%);
+   }
+
+   &__cover-active {
+      display: none;
+   }
+}
+.active {
+   transition: all 0.5s ease;
+   transform: scale(1.05);
+}
+#img1 {
+   transform: translate(0px, 20px);
+}
+#img2 {
+   transform: translate(0px, 25px);
+}
+#img3 {
+   transform: translate(0px, 15px);
+}
+#img4 {
+   transform: translate(0px, 10px);
+}
+#img5 {
+   transform: translate(0px, 40px);
+}
+#img6 {
+   transform: translate(0px, 30px);
+}
+
+.container {}
